<resources>
    <string name="app_name" translatable="false">Cingapura</string>
    <string name="imgDescription" translatable="false">Imagem Cingapura</string>
    <string name="upload" translatable="false">Upload</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="camera_value" translatable="false">Leica M Typ 240</string>
    <string name="discard" translatable="false">Discard</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="settings_value" translatable="false">f/4 16s ISO 200</string>
    <string name="singapore_description" translatable="false">Singapore (/ˈsɪŋ(ɡ)əpɔːr/ (About this soundlisten)), officially the Republic of Singapore, is a city-state in Southeast Asia. \nThe country is situated one degree (137 kilometres or 85 miles) north of the equator, at the southern tip of the Malay Peninsula, with Indonesia\'s Riau Islands to the south and \nPeninsular Malaysia to the north. Singapore\'s territory consists of one main island along with 62 other islets. Since independence, the sovereign state extensive land reclamation has increased its total size by 23% (130 square kilometres or 50 square miles).</string>
    <string name="singapore" translatable="false">Singapore</string>
</resources>
